--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,14 +1,8 @@
 ---
-layout: page
-title: Page Not Found
+layout: default
 ---
-<section class="page-section">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">404 - Page Not Found</h2>
-        <h3 class="section-subheading text-muted">The requested page could not be found.</h3>
-      </div>
-    </div>
-  </div>
-</section>
+{% include navheader.html %}
+
+{% include services.html %}
+{% include team.html %}
+{% include teamline.html %}
