--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,1 @@
----
-layout: default
----
-{% include navheader.html %}
-
-{% include services.html %}
-{% include team.html %}
-{% include teamline.html %}
+ciao
