--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,1 +1,8 @@
-ciao
+---
+layout: default
+---
+{% include navheader.html %}
+
+{% include services.html %}
+{% include team.html %}
+{% include teamline.html %}
