--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -2,11 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <div class="container">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      {%- if site.logo -%}
-      {% include logo.html %}
-      {%- else -%}
-      {{ site.title }}
-      {%- endif -%}
+      <img src="logo.jpg" alt="logo">
     </a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
       data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
