--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -38,6 +38,9 @@
         A recurrent pattern in movies ?
       </div>
     </div>
+   <button onclick=<a href="#introduction"></a>
+    Tell me more
+   </button>
   </div>
 </header>
 <!-- End Header -->
