--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -16,7 +16,7 @@
 
         <li class="nav-item">
           {%- if link.section -%}
-          <a class="nav-link js-scroll-trigger" href="#{{ link.section }}">{{ link.title }}</a>
+         <a class="nav-link js-scroll-trigger" href="#{{ link.section }}">{{ link.title }}</a>
           {%- else -%}
           <a class="nav-link js-scroll-trigger" href="#">{{ link.title }}</a>
           {%- endif -%}
@@ -37,10 +37,11 @@
       <div class="intro-lead-in">
         A recurrent pattern in movies ?
       </div>
+	<a href="#introduction">
+  	   <button style="background:#3630a3;color:white;"> 
+	   Tell me more </button>
+	</a>
     </div>
-   <button onclick=<a href="#introduction"></a>
-    Tell me more
-   </button>
   </div>
 </header>
 <!-- End Header -->
