--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -38,7 +38,7 @@
         A recurrent pattern in movies ?
       </div>
 	<a href="#introduction">
-  	   <button style="background:#3630a3;color:white;"> 
+  	   <button style="padding:20px;background:red;color:white;border-radius: 4px;"> 
 	   Tell me more </button>
 	</a>
     </div>
