--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -27,7 +27,9 @@
   </div>
 </nav>
 <!-- End Navigation -->
-
+html {
+  scroll-behavior: smooth;
+}
 <!-- Header -->
 <header class="masthead">
   <div class="container">
@@ -38,7 +40,7 @@
         A recurrent pattern in movies ?
       </div>
 	<a href="#introduction">
-  	   <button style="padding:20px;background:red;color:white;border-radius: 4px;"> 
+  	   <button style="padding:20px;background:red;color:white;border-radius: 4px; border-color:red;"> 
 	   Tell me more </button>
 	</a>
     </div>
