--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,5 +3,5 @@ layout: default
 ---
 {% include navheader.html %}
 {% include introduction.html %}
-
+{% include nb_of_movies.html %}
 {% include team.html %}
