--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,5 +3,6 @@ layout: default
 ---
 {% include navheader.html %}
 {% include introduction.html %}
+{% include nb_of_characters_per_year.html %}
 {% include nb_of_movies.html %}
 {% include team.html %}
