--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,4 +5,5 @@ layout: default
 {% include introduction.html %}
 {% include nb_of_characters_per_year.html %}
 {% include nb_of_movies.html %}
+{% include story_NLP.html %}
 {% include team.html %}
