--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,4 +1,10 @@
 <!-- Introduction -->
+<style>  
+div {    
+  padding-left: 75px;  
+  padding-right: 75px;
+}  
+</style>  
 <section class="page-section" id="introduction">
 	<div class="container">
 		<div class="row">
