--- a/_includes/story_NLP.html
+++ b/_includes/story_NLP.html
@@ -2,8 +2,10 @@
 <section class="page-section" id="story-ex">
 	<div class="container">
 		<div class="row">
-			<h1 id="story-ex">Story example</h1>
-			<p><em>"Once upon a time, there lived a young prince called Flynn Rider. He was known by all to be kind, caring, and handsome. However, on one fateful day, his step-brother Cyrus consumed by jealousy decided to imprison him in a high tower far far away from the family kingdom. Research go on for weeks without success: the prince has vanished. Rapunzel, an ADAventurer from a small hamlet at the border of the kingdom, likes to explore the deep forests with her chameleon Pascal. On one of her wanders, she discovers the high tower where dear Flynn is kept captive. Sensing a human presence in the tower, Pascal rushed to the top where he encountered Flynn. The chameleon highly squeaked due to his surprise which worried Rapunzel who joined him at the top by using her long hair as a rope and saved Flynn. She then denounced Cyrus and his atrocious behaviour who is sentenced to jail."<em></p>
+			<center>
+			<h1 style="padding-bottom: 15px">Story example</h1> 
+			<p style="padding:70px"; align="justify"><em>"Once upon a time, there lived a young prince called Flynn Rider. He was known by all to be kind, caring, and handsome. However, on one fateful day, his step-brother Cyrus consumed by jealousy decided to imprison him in a high tower far far away from the family kingdom. Research go on for weeks without success: the prince has vanished. Rapunzel, an ADAventurer from a small hamlet at the border of the kingdom, likes to explore the deep forests with her chameleon Pascal. On one of her wanders, she discovers the high tower where dear Flynn is kept captive. Sensing a human presence in the tower, Pascal rushed to the top where he encountered Flynn. The chameleon highly squeaked due to his surprise which worried Rapunzel who joined him at the top by using her long hair as a rope and saved Flynn. She then denounced Cyrus and his atrocious behaviour who is sentenced to jail."<em></p>
+			</center>
 		</div>
 	</div>
 </section>
