--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -3,8 +3,8 @@
 	<div class="container">
 		<div class="row">
 			<center>
-			<h1> Introduction</h1>
-			<p style="padding-left: 55pxpx; padding-right: 55px"; align="justify">The damsel in distress is a standard narrative device that portrays female protagonists in the face of perilous situations as completely helpless. Indeed, they constantly need a male savior to help them escape their dangerous predicaments. Their agency is completely stripped away from them. More generally, women in the media are often portrayed as passive participants of narratives. They are only tools to provide motivation and purpose to the lead male characters. Using the movie summary corpus, our project aims to explore the &quot;activeness&quot; of female characters in movies and its evolution through time. Using natural language processing, the latter would be performed by searching for verbs and adjectives associated with the female characters in the summary and by investigating what type of power it gives to it. For homogeneity reasons, we decided to focus on US movies since 1940.</p>
+			<h1 style= "padding-bottom: 10px"> Introduction</h1>
+			<p style="padding-left: 55px; padding-right: 55px"; align="justify">The damsel in distress is a standard narrative device that portrays female protagonists in the face of perilous situations as completely helpless. Indeed, they constantly need a male savior to help them escape their dangerous predicaments. Their agency is completely stripped away from them. More generally, women in the media are often portrayed as passive participants of narratives. They are only tools to provide motivation and purpose to the lead male characters. Using the movie summary corpus, our project aims to explore the &quot;activeness&quot; of female characters in movies and its evolution through time. Using natural language processing, the latter would be performed by searching for verbs and adjectives associated with the female characters in the summary and by investigating what type of power it gives to it. For homogeneity reasons, we decided to focus on US movies since 1940.</p>
 			</center>
 		</div>
 	</div>
