--- a/_includes/story_table.html
+++ b/_includes/story_table.html
@@ -1,4 +1,4 @@
-<table style="width: 974px; border-style: solid;" width="974">
+<table style="height: 442px; width: 974px; border-style: solid; margin-left: auto; margin-right: auto;" width="974">
 <tbody>
 <tr>
 <td width="108"><em>NLP Process</em></td>
