--- a/_includes/story_table.html
+++ b/_includes/story_table.html
@@ -106,3 +106,6 @@
 </tr>
 </tbody>
 </table>
+
+<p><span style="color:#ff6600">Misplaced words</span></p>
+<p><span style="color:#ff0000">Missing words</span></p>
