--- a/_includes/story_table.html
+++ b/_includes/story_table.html
@@ -107,5 +107,5 @@
 </tbody>
 </table>
 
-<p><span style="color:#ff6600">Misplaced words</span></p>
-<p><span style="color:#ff0000">Missing words</span></p>
+<p style="padding:70px"><span style="color:#ff6600">Misplaced words</span></p>
+<p style="padding:70px"><span style="color:#ff0000">Missing words</span></p>
