--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,4 +6,5 @@ layout: default
 {% include nb_of_characters_per_year.html %}
 {% include story_NLP.html %}
 {% include story_table.html %}
+{% plotly_table_story.html %}
 {% include team.html %}
