--- a/_includes/legend_table.html
+++ b/_includes/legend_table.html
@@ -1,18 +1,20 @@
+
+
 <style type="text/css">
 .tg  {border:none;border-collapse:collapse;border-spacing:0;}
 .tg td{border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;
   padding:4px 4px;word-break:normal;}
 .tg th{border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;font-weight:normal;
   overflow:hidden;padding:4px 4px;word-break:normal;}
+.tg .tg-ycr8{background-color:#ffffff;text-align:left;vertical-align:top}
 .tg .tg-n5df{background-color:#ffffff;border-color:#000000;color:#343434;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-hrrh{background-color:#ffffff;border-color:#000000;color:#333333;text-align:left;vertical-align:top}
 .tg .tg-4g8n{background-color:#f8a102;border-color:#000000;color:#343434;font-weight:bold;text-align:center;vertical-align:top}
 .tg .tg-1d7j{background-color:#fe0000;border-color:#000000;color:#663234;font-size:11px;font-style:italic;font-weight:bold;
   text-align:left;vertical-align:top}
-.tg .tg-2qwx{background-color:#ffffff;border-color:#000000;color:#333333;text-align:center;vertical-align:top}
 .tg .tg-jbyd{background-color:#ffffff;border-color:#000000;text-align:center;vertical-align:top}
-.tg .tg-0lax{text-align:left;vertical-align:top}
 </style>
-<table class="tg" style="undefined;table-layout: fixed; width: 730px">
+<table class="tg" align="center" style="undefined;table-layout: fixed; width: 730px">
 <colgroup>
 <col style="width: 30px">
 <col style="width: 123px">
@@ -24,7 +26,7 @@
 <thead>
   <tr>
     <th class="tg-1d7j"></th>
-    <th class="tg-2qwx">Missing verb<br></th>
+    <th class="tg-hrrh">Missing verb</th>
     <th class="tg-jbyd"></th>
     <th class="tg-jbyd"></th>
     <th class="tg-jbyd"></th>
@@ -33,16 +35,16 @@
 </thead>
 <tbody>
   <tr>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-ycr8"></td>
+    <td class="tg-ycr8"></td>
+    <td class="tg-ycr8"></td>
+    <td class="tg-ycr8"></td>
+    <td class="tg-ycr8"></td>
+    <td class="tg-ycr8"></td>
   </tr>
   <tr>
     <td class="tg-4g8n"></td>
-    <td class="tg-2qwx">Misplaced verb<br></td>
+    <td class="tg-hrrh">Misplaced verb<br></td>
     <td class="tg-n5df"></td>
     <td class="tg-n5df"></td>
     <td class="tg-n5df"></td>
