--- a/_includes/legend_table2.html
+++ b/_includes/legend_table2.html
@@ -1,9 +1,9 @@
 <style type="text/css">
 .tg  {border:none;border-collapse:collapse;border-spacing:0;}
 .tg td{border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;
-  padding:4px 4px;word-break:normal;}
+  padding:4px 5px;word-break:normal;}
 .tg th{border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;font-weight:normal;
-  overflow:hidden;padding:4px 4px;word-break:normal;}
+  overflow:hidden;padding:4px 5px;word-break:normal;}
 .tg .tg-3yeq{background-color:#FFF;border-color:#000000;color:#333;text-align:left;vertical-align:top}
 .tg .tg-hrrh{background-color:#ffffff;border-color:#000000;color:#333333;text-align:left;vertical-align:top}
 .tg .tg-0lax{text-align:left;vertical-align:top}
@@ -12,7 +12,7 @@
 .tg .tg-r281{background-color:#f8a102;border-color:#000000;text-align:center;vertical-align:top}
 .tg .tg-jbyd{background-color:#ffffff;border-color:#000000;text-align:center;vertical-align:top}
 </style>
-<table class="tg" align="center" style="undefined;table-layout: fixed; width: 627px">
+<table class="tg" style="undefined;table-layout: fixed; width: 627px">
 <colgroup>
 <col style="width: 25px">
 <col style="width: 159px">
