--- a/_includes/legend_table2.html
+++ b/_includes/legend_table2.html
@@ -12,7 +12,7 @@
 .tg .tg-r281{background-color:#f8a102;border-color:#000000;text-align:center;vertical-align:top}
 .tg .tg-jbyd{background-color:#ffffff;border-color:#000000;text-align:center;vertical-align:top}
 </style>
-<table class="tg" style="undefined;table-layout: fixed; width: 627px">
+<table class="tg" align ="center" style="undefined;table-layout: fixed; width: 627px">
 <colgroup>
 <col style="width: 25px">
 <col style="width: 159px">
