--- a/_includes/legend_table2.html
+++ b/_includes/legend_table2.html
@@ -4,31 +4,31 @@
   padding:4px 5px;word-break:normal;}
 .tg th{border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;font-weight:normal;
   overflow:hidden;padding:4px 5px;word-break:normal;}
+.tg .tg-ycr8{background-color:#ffffff;text-align:left;vertical-align:top}
 .tg .tg-3yeq{background-color:#FFF;border-color:#000000;color:#333;text-align:left;vertical-align:top}
 .tg .tg-hrrh{background-color:#ffffff;border-color:#000000;color:#333333;text-align:left;vertical-align:top}
-.tg .tg-0lax{text-align:left;vertical-align:top}
 .tg .tg-1d7j{background-color:#fe0000;border-color:#000000;color:#663234;font-size:11px;font-style:italic;font-weight:bold;
   text-align:left;vertical-align:top}
 .tg .tg-r281{background-color:#f8a102;border-color:#000000;text-align:center;vertical-align:top}
 .tg .tg-jbyd{background-color:#ffffff;border-color:#000000;text-align:center;vertical-align:top}
 </style>
-<table class="tg" align ="center" style="undefined;table-layout: fixed; width: 627px">
+<table class="tg" align="center" style="undefined;table-layout: fixed; width: 827px">
 <colgroup>
-<col style="width: 25px">
-<col style="width: 159px">
-<col style="width: 25px">
-<col style="width: 131px">
-<col style="width: 187px">
-<col style="width: 96px">
+<col style="width: 24px">
+<col style="width: 156px">
+<col style="width: 24px">
+<col style="width: 129px">
+<col style="width: 396px">
+<col style="width: 94px">
 </colgroup>
 <thead>
   <tr>
-    <th class="tg-0lax"></th>
-    <th class="tg-0lax"></th>
-    <th class="tg-0lax"></th>
-    <th class="tg-0lax"></th>
-    <th class="tg-0lax"></th>
-    <th class="tg-0lax"></th>
+    <th class="tg-ycr8"></th>
+    <th class="tg-ycr8"></th>
+    <th class="tg-ycr8"></th>
+    <th class="tg-ycr8"></th>
+    <th class="tg-ycr8"></th>
+    <th class="tg-ycr8"></th>
   </tr>
 </thead>
 <tbody>
@@ -37,7 +37,7 @@
     <td class="tg-hrrh">Missing verb</td>
     <td class="tg-r281"></td>
     <td class="tg-3yeq">Misplaced verb<br></td>
-    <td class="tg-jbyd"></td>
+    <td class="tg-jbyd"><span style="color:#FFF;background-color:#FFF">hgg</span></td>
     <td class="tg-jbyd"></td>
   </tr>
 </tbody>
