--- a/_includes/legend_table3.html
+++ b/_includes/legend_table3.html
@@ -11,7 +11,7 @@
   text-align:left;vertical-align:top}
 .tg .tg-r281{background-color:#f8a102;border-color:#000000;text-align:center;vertical-align:top}
 </style>
-<table class="tg" align="center" style="undefined;table-layout: fixed; width: 335px">
+<table class="tg" align="right" style="undefined;table-layout: fixed; width: 335px">
 <colgroup>
 <col style="width: 24px">
 <col style="width: 155px">
