--- a/_includes/story_table_better.html
+++ b/_includes/story_table_better.html
@@ -1,5 +1,5 @@
 <style type="text/css">
-.tg  {border-collapse:collapse;border-color:#000000;border-spacing:0;border-style:solid;border-width:1px;}
+.tg  {border-collapse:collapse;border-color:black;border-spacing:0;border-style:solid;border-width:1px;}
 .tg td{background-color:#e8edff;border-color:#aabcfe;border-style:solid;border-width:0px;color:#669;
   font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg th{background-color:#b9c9fe;border-color:#aabcfe;border-style:solid;border-width:0px;color:#039;
