--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -3,9 +3,8 @@
 	<div style="padding-left: 55px; padding-right: 55px"; align="justify"; class="container">
 		<div class="row">
 			<center>
-			<h1 style= "padding-bottom: 10px"> A glimpse of our data...</h1>
-			<p> blablabla </p>
-
+			<h1 style= "padding-bottom: 10px"> A glimpse of our data... </h1>
+			<p style="padding-left:70px; padding-right:70px; padding-bottom:30px"; align="justify"> blablabla </p>
 			</center>
 		</div>
 	</div>
