--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="row">
 			<center>
-			<h1 style= "padding-bottom: 10px", align="center" > A glimpse of our data... </h1>
+			<h1 style= "padding-bottom: 10px"; align="center" > A glimpse of our data... </h1>
 			<p style="padding-left:70px; padding-right:70px"; align="justify"> blablabla </p>
 			</center>
 		</div>
