--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -5,6 +5,7 @@
 			<center>
 			<h1 style= "padding-bottom: 10px"; align="center" > A glimpse of our data... </h1>
 			<p style="padding-left:70px; padding-right:70px"; align="justify"> blablabla </p>
+			{% include top10genres_barplot.html %}
 			</center>
 		</div>
 	</div>
