--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -1,10 +1,10 @@
 <!-- A glimpse of our data... -->
 <section class="page-section" id="glimpse">
-	<div class="container">
+	<div style="padding-left: 55px; padding-right: 55px"; align="justify"; class="container">
 		<div class="row">
 			<center>
-			<h1 style= "padding-bottom: 10px"; align="center" > A glimpse of our data... </h1>
-			<p style="padding-left:70px; padding-right:70px"; align="justify"> blablabla </p>
+			<h1 style= "padding-bottom: 10px"> A glimpse of our data... </h1>
+			<p style="padding-left: 55px; padding-right: 55px"; align="justify"> blablabla </p>
 			{% include top10genres_barplot.html %}
 			</center>
 		</div>
