--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -2,7 +2,7 @@
 <section class="page-section" id="glimpse">
 	<div style="padding-left: 55px; padding-right: 55px"; align="justify"; class="container">
 		<center>
-		<h1 style= "padding-bottom: 10px"> A glimpse of our data... </h1>
+		<h1 style= "padding-bottom: 10px"> ✨ A glimpse of our data... </h1>
 		<p style="padding-left: 55px; padding-right: 55px"; align="justify"> blablabla </p>
 		{% include top10genres_barplot.html %}
 		</center>
