add fraction plot

--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -4,6 +4,7 @@
 		<center>
 		<h1 style= "padding-bottom: 10px"> 🔎 A glimpse of our data... </h1>
 		<p style="padding-left: 55px; padding-right: 55px"; align="justify"> blablabla </p>
+		{% include evolution_fraction_overall.html %}
 		{% include top10genres_barplot.html %}
 		</center>
 	</div>
