--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -3,9 +3,10 @@
 	<div style="padding-left: 55px; padding-right: 55px"; align="justify"; class="container">
 		<center>
 		<h1 style= "padding-bottom: 10px"> 🔎 A glimpse of our data... </h1>
-		<p style="padding-left: 55px; padding-right: 55px"; align="justify"> We've seen that the majority of movies include a higher fraction of male compared to female characters. Has it always been the case and is the trend chaning ? <br> As we can observe on the graph, this inequality of gender representation has always been present. However, the difference in fraction is continuously decreasing.</p>
+		<h3 style="padding-left: 55px; padding-right: 55px"; align="justify"> We've seen that the majority of movies include a higher fraction of male compared to female characters. Has it always been the case and is the trend chaning ? </h3>
+		<p style="padding-left: 55px; padding-right: 55px"; align="justify">As we can observe on the graph, this inequality of gender representation has always been present. However, the difference in fraction is continuously decreasing.</p>
 		{% include evolution_fraction_overall.html %}
-		<p style="padding-left: 55px; padding-right: 55px"; align="justify"> Indeed, women are always underrepresented in movies but is it the same for all movie genres ? <br> </p>
+		<h3 style="padding-left: 55px; padding-right: 55px"; align="justify"> Indeed, women are always underrepresented in movies but is it the same for all movie genres ? <br> </h3>
 		{% include top10genres_barplot.html %}
 		</center>
 	</div>
