--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -7,6 +7,8 @@
 		<p style="padding-left: 55px; padding-right: 55px"; align="justify">As we can observe on the graph, this inequality of gender representation has always been present. However, the difference in fraction is continuously decreasing.</p>
 		{% include evolution_fraction_overall.html %}
 		<h4 style="padding-left: 55px; padding-right: 55px"; align="justify"> Indeed, women are always underrepresented in movies but is it the same for all movie genres ? <br> </h4>
+		<p style="padding-left: 55px; padding-right: 55px"; align="justify">
+	 	In this plot, we observe that the top 10 genres in terms of characters' appearances are different between men and women. We notice that some genres are shared such as drama, thriller and romantic comedy but others are completely absent for a certain gender. Additionally, some of the genres are very stereotypical for each gender. For example, 4 out of 10 genres for female characters are related to romance or family whereas male characters are much more present in action science fiction movies. </p>
 		{% include top10genres_barplot.html %}
 		</center>
 	</div>
