--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,4 +5,5 @@ layout: default
 {% include introduction.html %}
 {% include glimpse_data.html %}
 {% include story_NLP.html %}
+{% include data_analysis.html %}
 {% include team.html %}
