--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -10,7 +10,8 @@
 		<p style="padding-left: 55px; padding-right: 55px"; align="justify">
 	 	In this plot, we observe that the top 10 genres in terms of characters' appearances are different between men and women. We notice that some genres are shared such as drama, thriller and romantic comedy but others are completely absent for a certain gender. Additionally, some of the genres are very stereotypical for each gender. For example, 4 out of 10 genres for female characters are related to romance or family whereas male characters are much more present in action science fiction movies. </p>
 		{% include top10genres_barplot.html %}
-		<p> Insert <em>Difference percentage by few genres, choice of two for comparaison by 5 years</em> </p>
+		<h4 style="padding-left: 55px; padding-right: 55px"; align="justify">  </h4>
+		<p style="padding-left: 55px; padding-right: 55px"; align="justify"> Insert <em>Difference percentage by few genres, choice of two for comparaison by 5 years</em> </p>
 		</center>
 	</div>
 </section>
