--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -3,12 +3,12 @@
 	<div style="padding-left: 55px; padding-right: 55px"; align="justify"; class="container">
 		<center>
 		<h1 style= "padding-bottom: 10px"> 🔎 A glimpse of our data... </h1>
-		<h4 style="padding-left: 55px; padding-right: 55px"; align="justify"> We've seen that the majority of movies include a higher fraction of male compared to female characters. Has it always been the case and is the trend changing ? </h4>
-		<p style="padding-left: 55px; padding-right: 55px"; align="justify">As we can observe on the graph, this inequality of gender representation has always been present. However, the difference in fraction is continuously decreasing.</p>
+		<h4 style="padding-left: 55px; padding-right: 55px"; align="justify"> Women are underrepresented in movies </h4>
+		<p style="padding-left: 55px; padding-right: 55px"; align="justify"> We've seen that the majority of movies include a higher fraction of male compared to female characters. Has it always been the case and is the trend changing? As we can observe on the graph, this inequality has always been present. Indeed, the fraction of female characters varies between 25% and 36%. Interrestigly, we can see a slight increasing trend from the 80s coninsiding with the slow improvement of women rights since the 80s.</p>
 		{% include evolution_fraction_overall.html %}
-		<h4 style="padding-left: 55px; padding-right: 55px"; align="justify"> Indeed, women are always underrepresented in movies but is it the same for all movie genres ? <br> </h4>
+		<h4 style="padding-left: 55px; padding-right: 55px"; align="justify"> Indeed, overall women are underrepresented in movies but is it the same for all movie genres? <br> </h4>
 		<p style="padding-left: 55px; padding-right: 55px"; align="justify">
-	 	In this plot, we observe that the top 10 genres in terms of characters' appearances are different between men and women. We notice that some genres are shared such as drama, thriller and romantic comedy but others are completely absent for a certain gender. Additionally, some of the genres are very stereotypical for each gender. For example, 4 out of 10 genres for female characters are related to romance or family whereas male characters are much more present in action science fiction movies. </p>
+	 	In this plot, we observe that the top 10 genres featuring female or male characters are different. We notice that some genres are shared such as drama, thriller and romantic comedy but others are completely absent for the other gender. Additionally, some of the genres are very stereotypical. For example, 4 out of 10 genres for female characters are related to romance or family whereas male characters are much more present in action and science fiction movies. </p>
 		{% include top10genres_barplot.html %}
 		<h4 style="padding-left: 55px; padding-right: 55px"; align="justify">  </h4>
 		<p style="padding-left: 55px; padding-right: 55px"; align="justify"> Insert <em>Difference percentage by few genres, choice of two for comparaison by 5 years</em> </p>
