--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -4,7 +4,7 @@
 		<center>
 		<h1 style= "padding-bottom: 10px"> 🔎 A glimpse of our data... </h1>
 		<h4 style="padding-left: 55px; padding-right: 55px"; align="justify"> Women are underrepresented in movies </h4>
-		<p style="padding-left: 55px; padding-right: 55px"; align="justify"> We've seen that the majority of movies include a higher fraction of male compared to female characters. Has it always been the case and is the trend changing? As we can observe on the graph, this inequality has always been present. Indeed, the fraction of female characters varies between 25% and 36%. Interestingly, we can see a slight increasing trend from the 80s coinciding with the slow improvement of women rights since the 80s.</p>
+		<p style="padding-left: 55px; padding-right: 55px"; align="justify"> We've seen that the large majority of movies include a higher fraction of male compared to female characters at least in the top grossing movies released in 2021. But, has it always been the case and is the trend changing? As we can observe on the graph, this inequality has always been present. Indeed, the fraction of female characters varies between 25% and 36%. Interestingly, we can see a slight increasing trend from the 80s coinciding with the slow improvement of women rights since the late 70s.</p>
 		{% include evolution_fraction_overall.html %}
 		<h4 style="padding-left: 55px; padding-right: 55px"; align="justify"> Indeed, overall women are underrepresented in movies but is it the same for all movie genres? <br> </h4>
 		<p style="padding-left: 55px; padding-right: 55px"; align="justify">
