add conclusion section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,4 +6,5 @@ layout: default
 {% include glimpse_data.html %}
 {% include story_NLP.html %}
 {% include data_analysis.html %}
+{% include conclusion.html %}
 {% include team.html %}
