--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -4,7 +4,7 @@
 		<div class="row">
 			<center>
 			<h1 style= "padding-bottom: 10px"> Conclusion</h1>
-			<div id="wrap" style="width:700px; height:500px; overflow-x: scroll; padding-left: 55px; padding-right: 55px"; align="justify";> 
+			<div style="width:700px; height:700px; overflow-x: scroll; padding-left: 55px; padding-right: 55px;";> 
 			{% include evolution_fraction_scroll.html%}
 			</div>
 			
