--- a/_includes/story_NLP.html
+++ b/_includes/story_NLP.html
@@ -2,7 +2,7 @@
 <section class="page-section" id="story-ex">
 	<div class="container">
 		<center>
-		<h1 style= "padding-bottom: 10px"> Story Example</h1>
+		<h1 style= "padding-bottom: 10px"> 📝Running NLP pipeline...</h1>
 		<p style="padding-left:70px; padding-right:70px; padding-bottom:30px"; align="justify"> In order to determine how active the male and female characters are, we analyze the summaries with natural language processing. Here is an example of story that will be analyzed with the same process: <br> <br> <em> "Once upon a time, there lived a young prince called Flynn Rider. He was known by all to be kind, caring, and handsome. However, on one fateful day, his step-brother Cyrus consumed by jealousy decided to imprison him in a high tower far far away from the family kingdom. Research go on for weeks without success: the prince has vanished. Rapunzel, an ADAventurer from a small hamlet at the border of the kingdom, likes to explore the deep forests with her chameleon Pascal. On one of her wanders, she discovers the high tower where dear Flynn is kept captive. Sensing a human presence in the tower, Pascal rushed to the top where he encountered Flynn. The chameleon highly squeaked due to his surprise which worried Rapunzel who joined him at the top by using her long hair as a rope and saved Flynn. She then denounced Cyrus and his atrocious behaviour who is sentenced to jail."</em> </p>
 		{% include story_table_better.html %}
 		{% include legend_table3.html %}
