--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -3,7 +3,7 @@
 	<div style="padding-left: 55px; padding-right: 55px"; align="justify"; class="container">
 		<center>
 		<h1 style= "padding-bottom: 10px"> Conclusion</h1>
-		<div style="style="overflow-x: scroll; padding-left: 55px; padding-right: 55px;"";> 
+		<div style="overflow-x: scroll; padding-left: 55px; padding-right: 55px;"> 
 		{% include evolution_fraction_scroll.html%}
 		</div>
 
