--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -1,20 +1,36 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Data in numbers
+  <link rel="stylesheet" type="text/css" href="counter.css">
+<body>
+<div class="bg is-size-1">Scroll down</div>
+<nav class="level">
   <div class="level-item has-text-centered">
     <div>
-      <p class="heading">Movies</p>
+      <p class="heading">Tweets</p>
       <p class="title js-count-up" data-value="3456"></p>
     </div>
   </div>
   <div class="level-item has-text-centered">
     <div>
-      <p class="heading">Female characters</p>
+      <p class="heading">Following</p>
       <p class="title js-count-up" data-value="123"></p>
     </div>
   </div>
   <div class="level-item has-text-centered">
     <div>
-      <p class="heading">Male characters</p>
+      <p class="heading">Followers</p>
       <p class="title js-count-up" data-value="450000"></p>
     </div>
   </div>
+  <div class="level-item has-text-centered">
+    <div>
+      <p class="heading">Likes</p>
+      <p class="title js-count-up" data-value="789"></p>
+    </div>
   </div>
+</nav>
+<div class="bg is-size-1">Scroll up</div>
+</body>
+</html>
