--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -1,20 +1,27 @@
+<!-- counter -->
 
-  <div class="level-item has-text-centered">
-    <div>
-      <p class="heading">Movies</p>
-      <p class="title js-count-up" data-value="3456"></p>
-    </div>
-  </div>
-  <div class="level-item has-text-centered">
-    <div>
-      <p class="heading">Female characters</p>
-      <p class="title js-count-up" data-value="123"></p>
-    </div>
-  </div>
-  <div class="level-item has-text-centered">
-    <div>
-      <p class="heading">Male characters</p>
-      <p class="title js-count-up" data-value="450000"></p>
-    </div>
-  </div>
-  </div>
+<div class="container">
+	<div class="row">
+		div class="col-lg-12 text-center">
+			<h2>Data in numbers</h2>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-12 col-md-6 col-lg-3">
+			<div class="category">
+				<h4>Movies</h4>
+				<p></p>
+			</div>
+			<div class="category">
+				<h4>Female characters</h4>
+				<p></p>
+			</div>
+			<div class="category">
+				<h4>Male characters</h4>
+				<p></p>
+			</div>
+		</div>
+	</div>
+	</div>
+
+<!-- End Team -->
