--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -1,27 +1,5 @@
-<!-- counter -->
-
-<div class="container">
-	<div class="row">
-		div class="col-lg-12 text-center">
-			<h2>Data in numbers</h2>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-12 col-md-6 col-lg-3">
-			<div class="category">
-				<h4>Movies</h4>
-				<p></p>
-			</div>
-			<div class="category">
-				<h4>Female characters</h4>
-				<p></p>
-			</div>
-			<div class="category">
-				<h4>Male characters</h4>
-				<p></p>
-			</div>
-		</div>
-	</div>
-	</div>
-
-<!-- End Team -->
+ <div class="row">
+  <div class="column">TRuc</div>
+  <div class="column">egf</div>
+  <div class="column">vg</div>
+</div> 
