--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -1,5 +1,5 @@
  <div class="row">
-  <div class="column">TRuc</div>
-  <div class="column">egf</div>
-  <div class="column">vg</div>
+  <div class="column"; width=33.33%>TRuc</div>
+  <div class="column"; width=66.66%>egf</div>
+  <div class="column"; width=100%>vg</div>
 </div> 
