--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -1,5 +1,16 @@
- <div class="row">
-  <div class="column"; width=33.33%>TRuc</div>
-  <div class="column"; width=66.66%>egf</div>
-  <div class="column"; width=100%>vg</div>
-</div> 
+<div class="container">
+         <div class="row">
+            <div class="col-sm">
+               <p id='0101' class="fs-2 text-light"></p>
+               <p class="text-light">Movies</p>
+            </div>
+            <div class="col-sm">
+               <p id='0102' class="fs-2 text-light">876</p>
+               <p class="text-light">Female characters</p>
+         </div>
+         <div class="col-sm">
+            <p class="fs-2 text-light"><span id='0103'>654</span>%</p>
+            <p class="text-light align-content-center">Male characters</p>
+         </div>
+      </div>
+</div>
