--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -1,16 +1,22 @@
-<div class="container">
-         <div class="row">
-            <div class="col-sm">
-               <p id='0101' class="fs-2 text-light"></p>
-               <p class="text-light">Movies</p>
-            </div>
-            <div class="col-sm">
-               <p id='0102' class="fs-2 text-light">876</p>
-               <p class="text-light">Female characters</p>
-         </div>
-         <div class="col-sm">
-            <p class="fs-2 text-light"><span id='0103'>654</span>%</p>
-            <p class="text-light align-content-center">Male characters</p>
-         </div>
-      </div>
-</div>
+<div class="bg is-size-1">Scroll down</div>
+<nav style="background-color: #00d1b2; color: #ffffff; padding-left: 55px; padding-right: 55px"; class="level">
+  <div class="level-item has-text-centered">
+    <div>
+      <p>Movies</p>
+      <p>434554</p>
+    </div>
+  </div>
+  <div class="level-item has-text-centered">
+    <div>
+      <p>F</p>
+      <p>876565</p>
+    </div>
+  </div>
+  <div class="level-item has-text-centered">
+    <div>
+      <p>M</p>
+      <p>98475</p>
+    </div>
+  </div>
+</nav>
+<div class="bg is-size-1">Scroll up</div>
