--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -1,6 +1,6 @@
 <!-- A glimpse of our data... -->
 <section class="page-section" id="glimpse">
-	<div style="padding-left: 55px; padding-right: 55px"; align="justify"; class="container">
+	<div class="container">
 		<center>
 		<h1 style= "padding-bottom: 10px"> 🔎 A glimpse of our data... </h1>
 		{% include counter.html %}
