--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -1,22 +1,73 @@
-<div class="bg is-size-1">Scroll down</div>
-<nav style="background-color: #00d1b2; color: #ffffff; padding-left: 55px; padding-right: 55px"; class="level">
-  <div class="level-item has-text-centered">
-    <div>
-      <p>Movies</p>
-      <p>434554</p>
-    </div>
-  </div>
-  <div class="level-item has-text-centered">
-    <div>
-      <p>F</p>
-      <p>876565</p>
-    </div>
-  </div>
-  <div class="level-item has-text-centered">
-    <div>
-      <p>M</p>
-      <p>98475</p>
-    </div>
-  </div>
-</nav>
-<div class="bg is-size-1">Scroll up</div>
+<!DOCTYPE html>
+<html lang="en">
+   <link href= "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" 
+      integrity="sha384giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+   <style>
+      .container{
+         background-color: #F8DE7E;
+      }
+      p{
+      text-align: center;
+      }
+   </style>
+<body>
+      <p>
+      <div class="container">
+         <div class="row">
+            <div class="col-sm">
+	       <p id='0101' class="fs-2">7'353</p>
+	       <p>USA movies 🎬</p>
+            </div>
+            <div class="col-sm">
+	       <p id='0102' class="fs-2">64'167</p>
+               <p>Female characters 🦸‍♀️</p>
+         </div>
+         <div class="col-sm">
+	    <p class="fs-2"><span id='0103'>133'660</p>
+	    <p class="align-content-center">Male characters 🕵️</p>
+         </div>
+      </div>
+   </div>
+   </p>
+   <script>
+      function animate(obj, initVal, lastVal, duration) {
+         let startTime = null;
+
+      //get the current timestamp and assign it to the currentTime variable
+      let currentTime = Date.now();
+
+      //pass the current timestamp to the step function
+      const step = (currentTime ) => {
+
+      //if the start time is null, assign the current time to startTime
+      if (!startTime) {
+         startTime = currentTime ;
+      }
+
+      //calculate the value to be used in calculating the number to be displayed
+      const progress = Math.min((currentTime - startTime)/ duration, 1);
+
+      //calculate what to be displayed using the value gotten above
+      obj.innerHTML = Math.floor(progress * (lastVal - initVal) + initVal);
+
+      //checking to make sure the counter does not exceed the last value (lastVal)
+      if (progress < 1) {
+         window.requestAnimationFrame(step);
+      } else {
+            window.cancelAnimationFrame(window.requestAnimationFrame(step));
+         }
+      };
+      //start animating
+         window.requestAnimationFrame(step);
+      }
+      let text1 = document.getElementById('0101');
+      let text2 = document.getElementById('0102');
+      let text3 = document.getElementById('0103');
+      const load = () => {
+         animate(text1, 0, 511, 7000);
+         animate(text2, 0, 232, 7000);
+         animate(text3, 100, 25, 7000);
+      }
+   </script>
+</body>
+</html>
