--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -2,15 +2,7 @@
 <html lang="en">
    <link href= "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" 
       integrity="sha384giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-   <style>
-      .container{
-         background-color: #F8DE7E;
-      }
-      p{
-      text-align: center;
-      }
-   </style>
-<body>
+<body style="background-color : #F8DE7E;">
       <p>
       <div class="container">
          <div class="row">
