--- a/_includes/counter.html
+++ b/_includes/counter.html
@@ -2,9 +2,9 @@
 <html lang="en">
    <link href= "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" 
       integrity="sha384giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-<body style="background-color : #F8DE7E;">
+<body>
       <p>
-      <div class="container">
+      <div style="background-color : #F8DE7E;"; class="container">
          <div class="row">
             <div class="col-sm">
 	       <p id='0101' class="fs-2">7'353</p>
