--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -2,7 +2,7 @@
 <section class="page-section" id="conclusion">
 	<div style="padding-left: 55px; padding-right: 55px"; align="justify"; class="container">
 		<center>
-		<h1 style= "padding-bottom: 10px"> Conclusion</h1>
+		<h1 style= "padding-bottom: 10px"> <b> Conclusion </b></h1>
 		<div style="overflow-x: scroll; padding-left: 55px; padding-right: 55px;"> 
 		{% include evolution_fraction_scroll.html%}
 		</div>
