--- a/_includes/data_analysis.html
+++ b/_includes/data_analysis.html
@@ -2,7 +2,7 @@
 <section class="page-section" id="analysis">
 	<div style="padding-left: 55px; padding-right: 55px"; align="justify"; class="container">
 		<center>
-		<h1 style= "padding-bottom: 10px"> 📊Data Analysis </h1>
+		<h1 style= "padding-bottom: 10px"> 📊 <b>Data Analysis </b></h1>
 		<p style="padding-left: 55px; padding-right: 55px"; align="justify"> blablabla... </p>
 		{% include mentions_decade.html %}
 		{% include activeness_decade.html %}
