--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,7 @@ layout: default
 {% include navheader.html %}
 {% include introduction.html %}
 {% include glimpse_data.html %}
+{% include diff_percentage.html %}
 {% include story_NLP.html %}
 {% include data_analysis.html %}
 {% include conclusion.html %}
