--- a/_includes/glimpse_data.html
+++ b/_includes/glimpse_data.html
@@ -12,7 +12,7 @@
 		<p style="padding-left: 55px; padding-right: 55px"; align="justify";>
 	 	In this plot, we observe that the top 10 genres featuring female or male characters are different. We notice that some genres are shared such as drama, thriller and romantic comedy but others are completely absent for the other gender. Additionally, some of the genres are very stereotypical. For example, 4 out of 10 genres for female characters are related to romance or family whereas male characters are much more present in action and science fiction movies. </p>
 		{% include top10genres_barplot.html %}
-		<h4 style="padding-left: 55px; padding-right: 55px"; align="justify";>  </h4>
+		{% include diff_percentage.html %}
 		<p style="padding-left: 55px; padding-right: 55px"; align="justify";> Insert <em>Difference percentage by few genres, choice of two for comparaison by 5 years</em> </p>
 		</center>
 	</div>
