--- a/_includes/passive_overall_clusters_comp.html
+++ b/_includes/passive_overall_clusters_comp.html
@@ -1,25 +1,26 @@
-<table><caption align="top">Clusters of passive actions of characters</caption>
+<table align = "center">
+<caption align="top"; style ="font-family:Arial, sans-serif">Clusters of passive actions of characters</caption>
 <tbody>
 <tr>
 <td>
 <table>
 <tbody>
 <tr>
-<td class="selected" style="display: table-cell; font-weight: bold; background-color: #fffc9e; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; font-weight: bold; font-family:Arial, sans-serif; background-color: #fffc9e; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Cluster</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; font-weight: bold; background-color: #fffc9e; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; font-weight: bold; font-family:Arial, sans-serif; background-color: #fffc9e; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p># verbs</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; font-weight: bold; background-color: #fffc9e; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; font-weight: bold;font-family:Arial, sans-serif; background-color: #fffc9e; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>score</p>
@@ -28,21 +29,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;text-align: left; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Violence</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit;font-family:Arial, sans-serif; text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>28</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>1438</p>
@@ -51,21 +52,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;text-align: left; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Love</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; text-align: center; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;text-align: center; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>7</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; text-align: center; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;text-align: center; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>210</p>
@@ -74,21 +75,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit;font-family:Arial, sans-serif; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Power</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>17</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;text-align: center; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>930</p>
@@ -97,21 +98,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; border-color: inherit; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;text-align: left; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
-<p>Exp_woman</p>
+<p>Trope woman</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; text-align: center; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;text-align: center; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>2</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; border-color: inherit; text-align: center; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;text-align: center; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>149</p>
@@ -127,21 +128,21 @@
 <table>
 <tbody>
 <tr>
-<td class="selected" style="display: table-cell; text-align: left; vertical-align: top; font-weight: bold; background-color: #fffc9e;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;vertical-align: top; font-weight: bold; background-color: #fffc9e;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>Cluster</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: left; vertical-align: top; font-weight: bold; background-color: #fffc9e;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;vertical-align: top; font-weight: bold; background-color: #fffc9e;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p># verbs</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: left; vertical-align: top; font-weight: bold; background-color: #fffc9e;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;vertical-align: top; font-weight: bold; background-color: #fffc9e;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>score</p>
@@ -150,21 +151,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Violence</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: center; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: center;font-family:Arial, sans-serif; vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>26</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: center; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: center; font-family:Arial, sans-serif;vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>1229</p>
@@ -173,21 +174,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>Love</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: center; vertical-align: top; background-color: #ffccc9;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: center; font-family:Arial, sans-serif;vertical-align: top; background-color: #ffccc9;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>8</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: center; vertical-align: top; background-color: #ffccc9;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: center; font-family:Arial, sans-serif;vertical-align: top; background-color: #ffccc9;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>404</p>
@@ -196,21 +197,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>Power</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: center; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: center; font-family:Arial, sans-serif;vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>16</p>
 </div>
 </div>
 </td>
-<td class="selected" style="display: table-cell; text-align: center; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: center; font-family:Arial, sans-serif;vertical-align: top;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>783</p>
@@ -219,21 +220,21 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="text-align: left; vertical-align: top;">
+<td class="selected" style="text-align: left; font-family:Arial, sans-serif;vertical-align: top;">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
-<p>Exp_woman</p>
+<p>Trope woman</p>
 </div>
 </div>
 </td>
-<td class="selected" style="text-align: center; vertical-align: top;">
+<td class="selected" style="text-align: center; font-family:Arial, sans-serif;vertical-align: top;">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>2</p>
 </div>
 </div>
 </td>
-<td class="selected" style="text-align: center; vertical-align: top;">
+<td class="selected" style="text-align: center; font-family:Arial, sans-serif;vertical-align: top;">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>149</p>
@@ -246,9 +247,9 @@
 </td>
 </tr>
 <tr>
-<td align="center">Male characters</td>
+<td align="center"; style = "font-family:Arial, sans-serif;">Male characters</td>
 <td>&nbsp;</td>
-<td align="center">Female characters</td>
+<td align="center"; style ="font-family:Arial, sans-serif">Female characters</td>
 </tr>
 </tbody>
 </table>
