--- a/_includes/passive_overall_clusters_comp.html
+++ b/_includes/passive_overall_clusters_comp.html
@@ -1,5 +1,4 @@
 <table align = "center">
-<caption align="top"; style ="font-family:Arial, sans-serif;font-size:20px;">Clusters of passive actions of characters</caption>
 <tbody>
 <tr>
 <td>
@@ -29,7 +28,7 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;font-size:16px;text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit; font-family:Arial, sans-serif;font-size:16px;text-align: left; vertical-align: top; background-color: #bffffd;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Violence</p>
@@ -75,7 +74,7 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; border-color: inherit;font-family:Arial, sans-serif; font-size:16px;text-align: left; vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; border-color: inherit;font-family:Arial, sans-serif; font-size:16px;text-align: left; vertical-align: top;background-color: #bffffd;" colspan="1" rowspan="1">
 <div class="wrap">
 <div style="margin: 10px 5px;">
 <p>Power</p>
@@ -174,7 +173,7 @@
 </td>
 </tr>
 <tr>
-<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;font-size:16px;vertical-align: top;" colspan="1" rowspan="1">
+<td class="selected" style="display: table-cell; text-align: left; font-family:Arial, sans-serif;font-size:16px;vertical-align: top;background-color: #ffccc9;" colspan="1" rowspan="1">
 <div class="wrap">
 <div class="" style="margin: 10px 5px;" contenteditable="false">
 <p>Love</p>
@@ -247,9 +246,9 @@
 </td>
 </tr>
 <tr>
-<td align="center"; style = "font-family:Arial, sans-serif;font-size:16px;">Male characters</td>
+<td align="center"; style = "font-family:Arial, sans-serif;font-size:15px;"> <em>Passive actions of male characters</em></td>
 <td>&nbsp;</td>
-<td align="center"; style ="font-family:Arial, sans-serif;font-size:16px;">Female characters</td>
+<td align="center"; style ="font-family:Arial, sans-serif;font-size:15px;"> <em>Passive actions of female characters </em></td>
 </tr>
 </tbody>
 </table>
